# osbot-v4

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  GAP_ANALYSIS.md  PM_REVIEW_EMPTY_DIFF.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bot_failure.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-docker.yml  ci.yml  claude-ci-fix.yml  claude-interactive.yml  codeql.yml  dependabot-auto-merge.yml  deploy-vps.yml  docs.yml  post-merge-deploy.yml  pr-lint.yml  pr-quality-gate.yml  release.yml  stale.yml
architecture/: index.html
configuration/: index.html
contributing/: index.html
deploy/: Dockerfile  README.md  audit.py  audit.sh  docker-compose.yml  entrypoint.sh  health_check.py
deployment/: index.html
docs/: architecture.md  configuration.md  contributing.md  deployment.md  index.md  trigger-branch-strategy.md
search/: search_index.json
src/osbot/: __main__.py  config.py  log.py  text.py  types.py
src/osbot/comms/: CLAUDE.md  __init__.py  blocker.py  comments.py  email.py  phrases.py  webhook.py
src/osbot/compliance/: CLAUDE.md  __init__.py  assignment.py  cla.py
src/osbot/discovery/: CLAUDE.md  __init__.py  issue_finder.py  issue_scorer.py  (+4 more)
tests/: conftest.py  test_bot_state_load.py  test_config.py  test_critic.py  test_decay.py  test_diagnostics.py  test_health_check.py  test_heartbeat.py  test_phrases.py  test_quality.py  test_quality_sentinels.py  test_reconcile.py  test_safety.py  test_scoring.py  test_self_reference.py  test_state.py  test_traces_atomic.py
trigger-branch-strategy/: index.html
(+64 files in other folders)
