[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osbot"
version = "1.0.0"
description = "Autonomous open-source contribution bot"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "python-semantic-release>=10.5.3",
    "bandit[toml]>=1.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.scripts]
osbot = "osbot.__main__:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/osbot"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "SIM105", "SIM108", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "ci", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
